--- a/k8s/backend.yaml
+++ b/k8s/backend.yaml
@@ -20,7 +20,7 @@ spec:
       securityContext:
         runAsUser: 1001
       containers:
-      - image: fetch-app-backend:v1.0.3
+      - image: t0m0d0cker/fetch-app-backend:v1.0.0
         name: fetch-app-backend
         ports:
         - containerPort: 8000
